# RealTimeSingingSynthesizer

./: .gitignore  Composer.py  Dockerfile  README.md  Voice.py  main.py  requirements.txt  test-api.py  voice-api.py
Sinsy-NG-0.0.1/: CMakeLists.txt
Sinsy-NG-0.0.1/include/: sinsy.h
Sinsy-NG-0.0.1/include/espeak-ng/: espeak_ng.h
Sinsy-NG-0.0.1/lib/: Sinsy.cpp
Sinsy-NG-0.0.1/lib/converter/: ConfGroup.h  ConfManager.h  Converter.cpp  IConvertable.h  PhonemeInfo.h  util_converter.h
Sinsy-NG-0.0.1/lib/hts_engine_API/: SynthConditionImpl.cpp
Sinsy-NG-0.0.1/lib/label/: ILabelOutput.h  IPhonemeLabel.h  LabelMeasure.cpp  LabelStream.h  NoteGroup.h  NoteLabeler.h  PhonemeLabeler.cpp  SyllableLabeler.cpp
Sinsy-NG-0.0.1/lib/score/: Beat.cpp  Beat.h  Dynamics.cpp  IScoreWritable.h  Key.cpp  Mode.cpp  Mode.h  Pitch.cpp  Pitch.h  Slur.h  util_score.h
Sinsy-NG-0.0.1/lib/shm_ringbuffer/: ringbuffer.cpp  ringbuffer.h  test_ringbuffer_read.cpp
Sinsy-NG-0.0.1/lib/temporary/: TempScore.h
Sinsy-NG-0.0.1/lib/util/: DiphthongConverter.cpp  DiphthongConverter.h  ForEachAdapter.h  IReadableStream.h  IStringable.h  MultibyteCharRange.h  OutputFile.h  PhonemeTable.cpp  StreamException.h  StringTokenizer.cpp  StringTokenizer.h  WritableStrStream.h  util_string.cpp  util_types.h
Sinsy-NG-0.0.1/lib/xml/: XmlData.cpp  XmlReader.h  XmlWriter.cpp  XmlWriter.h
Voice/: Constants.py  Voice.py  main.py
libespeak-NG/: Makefile.am
libespeak-NG/src/libespeak-ng/: ecantorix.h  tn_fnds.c  wavegen.c
synthesisSoftware/Sinsy-NG-0.0.1/: License  README.md  push.sh
synthesisSoftware/Sinsy-NG-0.0.1/lib/converter/: ConfGroup.cpp  ConfManager.cpp  Converter.h  IConf.h  PhonemeInfo.cpp  UnknownConf.cpp  UnknownConf.h  util_converter.cpp
synthesisSoftware/Sinsy-NG-0.0.1/lib/hts_engine_API/: SynthConditionImpl.h
synthesisSoftware/Sinsy-NG-0.0.1/lib/japanese/: JConf.cpp  JConf.h
synthesisSoftware/Sinsy-NG-0.0.1/lib/label/: INoteLabel.h  ISyllableLabel.h  LabelData.cpp  LabelData.h  LabelMaker.cpp  LabelMaker.h  LabelMeasure.h  LabelPosition.cpp  LabelPosition.h  LabelStream.cpp  LabelStrings.cpp  LabelStrings.h  NoteGroup.cpp  (+3 more)
synthesisSoftware/Sinsy-NG-0.0.1/testfile/: c.xml  e.xml  en.sinsy  test.sinsy
synthesisSoftware/libespeak-NG/: guix-env.scm
(+41 files in other folders)
